--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 terraform.tfvars
 terraform.tfstate
 terraform.tfstate.backup
-# .terraform
+.terraform
 mykey*
 kubenetes-300211-0e972be54a71.json
 gcpkey*
